<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.activities.UserLoginActivity">

    <io.selimdawa.multiwave.MultiWaveHeader
        android:id="@+id/waveHeader"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintTop_toTopOf="parent"
        app:mwhCloseColor="@color/colorPrimaryLight"
        app:mwhColorAlpha="0.45"
        app:mwhGradientAngle="45"
        app:mwhProgress="1"
        app:mwhStartColor="@color/colorPrimary"
        app:mwhVelocity="1"
        app:mwhWaveHeight="@dimen/height_titleBar"
        app:mwhWaves="MultiWave" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="-50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/waveHeader" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/login_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:startIconDrawable="@drawable/ic_login_account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/colorTextContent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/login_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameLayout"
        app:startIconDrawable="@drawable/ic_login_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/colorTextContent" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forget"
        style="@style/AppTheme.Label.Assistant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/login_forget"
        app:layout_constraintEnd_toEndOf="@id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout" />

    <Button
        android:id="@+id/login"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:text="@string/login_login"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="@id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@id/forget" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/login"
        app:layout_constraintStart_toStartOf="@id/login"
        app:layout_constraintTop_toBottomOf="@id/login">

        <TextView
            android:id="@+id/tourist_mode"
            style="@style/AppTheme.Label.Assistant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/login_tourist_mode"
            app:drawableTopCompat="@drawable/ic_login_tourist" />

        <View
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:background="@color/colorDivision" />

        <TextView
            android:id="@+id/verify_mode"
            style="@style/AppTheme.Label.Assistant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/login_verify_mode"
            app:drawableTopCompat="@drawable/ic_login_phone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>